--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "bugs": "",
   "type": "module",
   "bin": {
-    "mcp-server-payslip-web": "dist/index.js"
+    "mcp-server-payslip-web": "dist/src/index.js"
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc && shx chmod +x dist/*.js",
+    "build": "tsc && shx chmod +x dist/**/*.js",
     "prepare": "npm run build",
     "watch": "tsc --watch"
   },
