--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@rlj/payslip-mcp",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "MCP server for using the Payslip Web API",
   "license": "MIT",
   "homepage": "",
   "bugs": "",
   "type": "module",
+  "repository": "https://github.com/renlijia-ai/payslip-mcp",
   "bin": {
     "mcp-server-payslip-web": "dist/src/index.js"
   },
